<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_nanodegree_app">My Nanodegree App!</string>
    <string name="popular_movies">POPULAR MOVIES</string>
    <string name="stock_hawk">STOCK HAWK</string>
    <string name="go_ubiquitoes">GO UBIQUITOES</string>
    <string name="make_your_app_material">MAKE YOUR APP MATERIAL</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="capstone">CAPSTONE</string>

</resources>
