<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vishdha.android.myappportfolio.app.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_nanodegree_app"
        android:id="@+id/app_text"
        android:layout_marginTop="52dp"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textSize="20sp"
        android:textIsSelectable="false"
        android:layout_marginBottom="10dp"
        android:layout_alignRight="@+id/pop_movies_button"
        android:layout_alignEnd="@+id/pop_movies_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies"
        android:id="@+id/pop_movies_button"
        android:layout_below="@+id/app_text"
        android:layout_alignLeft="@+id/stock_hack_button"
        android:layout_alignStart="@+id/stock_hack_button"
        android:layout_alignRight="@+id/stock_hack_button"
        android:layout_alignEnd="@+id/stock_hack_button"
        android:background="#6200EA"
        android:textColor="#ffffff"
        android:layout_marginBottom="10dp"
        android:onClick="popularMovies" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="STOCK HAWK"
        android:id="@+id/stock_hack_button"
        android:layout_below="@+id/pop_movies_button"
        android:layout_alignLeft="@+id/build_button"
        android:layout_alignStart="@+id/build_button"
        android:layout_alignRight="@+id/build_button"
        android:layout_alignEnd="@+id/build_button"
        android:background="#6200EA"
        android:textColor="#ffffff"
        android:layout_marginBottom="10dp"
        android:onClick="stockHawk"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/build_button"
        android:layout_below="@+id/stock_hack_button"
        android:layout_alignLeft="@+id/app_materail_button"
        android:layout_alignStart="@+id/app_materail_button"
        android:layout_alignRight="@+id/app_materail_button"
        android:layout_alignEnd="@+id/app_materail_button"
        android:background="#6200EA"
        android:textColor="#ffffff"
        android:layout_marginBottom="10dp"
        android:onClick="buildItBigger" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app_material"
        android:id="@+id/app_materail_button"
        android:layout_below="@+id/build_button"
        android:layout_centerHorizontal="true"
        android:background="#6200EA"
        android:textColor="#ffffff"
        android:layout_marginBottom="10dp"
        android:onClick="makeApp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitoes"
        android:id="@+id/ubiquitoes_button"
        android:layout_below="@+id/app_materail_button"
        android:layout_alignRight="@+id/app_materail_button"
        android:layout_alignEnd="@+id/app_materail_button"
        android:layout_alignLeft="@+id/app_materail_button"
        android:layout_alignStart="@+id/app_materail_button"
        android:background="#6200EA"
        android:textColor="#ffffff"
        android:layout_marginBottom="10dp"
        android:onClick="goUbiquitous" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/capstone_button"
        android:layout_below="@+id/ubiquitoes_button"
        android:layout_alignRight="@+id/ubiquitoes_button"
        android:layout_alignEnd="@+id/ubiquitoes_button"
        android:layout_alignLeft="@+id/ubiquitoes_button"
        android:layout_alignStart="@+id/ubiquitoes_button"
        android:background="#6200EA"
        android:textColor="#ffffff"
        android:onClick="capStone"/>
</RelativeLayout>
